style.css
body {
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: Roboto ,arial;
 }

 .first-chunk {
    background-color: #1F2937;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 8px 128px;
}

.logo {
    font-size: 24px;
    color: #F9FAF8
}

.header-link {
    font-size: 18px;
    color: #E5E7EB;
}

ul {
    display: flex;
    gap: 16px;
    list-style-type: none;
}

a {
    text-decoration: none;
}

.hero {
    display: flex;
    margin: 64px 128px;
    flex-wrap: wrap;
    justify-content: space-between;
}

.hero-main {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
    margin: 0;
}

.hero-sub {
    font-size: 18px;
    color: #E5E7EB;
    margin: 8px 0;
}

button {
    background-color: #3882F6;
    border: 1px solid #1F2937;
    color: white;
    padding: 8px 32px;
    border-radius: 10px;
}

.hero-text {
    flex-basis: 500px;
}

.hero-img {
    width: 400px;
    height: 225px;
    flex-shrink: 1;
}

.title {
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
    padding: 24px;
    text-align: center;
}

.gallery-img,
.gallery-sub {
    width: 150px;
    height: 150px;
}

.gallery-img {
    border: 4px solid #3882F6;
    border-radius: 15px;
}

.gallery-sub {
    text-align: center;
    margin: 0px;
}

.image-gallery {
    display: flex;
    gap: 32px;
    justify-content: center;
    flex-wrap: wrap;
}

.third-chunk {
    background-color: #E5E7EB;
    flex-shrink: 1;
}

.quote {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-wrap: wrap;
}

.quote-text {
    color: #1F2937;
    font-weight: lighter;
    font-style: italic;
    font-size: 36px;
    margin-top: 100px;
    width: 800px;
}

.credit {
    flex-basis: 10px;
    text-align: right;
    font-weight: bold;
    margin-bottom: 100px;
}

.fourth-chunk {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 60px 120px;
}

.cta {
    display: flex;
    background-color: #3882F6;
    width: 900px;
    padding: 32px 64px;
    border: 1px solid #3882F6;
    border-radius: 6px;
    gap: 8px;
}

.cta-text {
    flex-basis: 800px;
    color: white;
}

.cta-button {
    background-color: #3882F6;
    border: 1px solid white;
    color: white;
    padding: 8px 32px;
    border-radius: 6px;
}

.cta-sub {
    font-weight: light;
}

.fifth-chunk {
    background-color: #1F2937;
    display: flex;
    justify-content: center;
    align-items: center;
}

.footer {
    padding: 24px;
    color: white;
}

